<resources>
    <string name="application_name">微樂志工</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">志工訊息</string>
    <string name="title_section_enterprise_volunteer">企業志工</string>
    <string name="title_section2">物資訊息</string>
    <string name="title_section3">我要捐款</string>
    <string name="volunteer_tab_inside_1">進階搜尋</string>
    <string name="volunteer_tab_inside_2">全部活動</string>
    <string name="volunteer_tab_inside_3">附近活動</string>
    <string name="volunteer_tab_inside_4">活動單位</string>
    <string name="item_tab_inside_1">進階搜尋</string>
    <string name="item_tab_inside_2">全部物資缺</string>
    <string name="item_tab_inside_3">附近物資缺</string>
    <string name="item_tab_inside_4">活動單位</string>
    <string name="fragment_event_register_privacy_tip">您所提供的個人資料將只用做辦理活動保險</string>
    <string name="fragment_event_register_tv_policy"><u><i>我已詳閱微樂志工隱私權政策並同意</i></u></string>
    <string name="fragment_login_register_tv_policy"><u><i>我已詳閱、了解並接受 微樂志工隱私權政策</i></u></string>
    <string name="fragment_login_tv_forgot_password"><u><i>忘記密碼?</i></u></string>
    <string name="fragment_login_tv_register"><u><i>註冊</i></u></string>
    <string name="image_delete_dialog_title">確定刪除此圖片?</string>
    <string name="image_delete_dialog_ok">刪除</string>
    <string name="image_delete_dialog_cancel">取消</string>
    <string name="camera_select_intent">請選擇相機</string>
    <string name="image_select_intent">請選擇圖片</string>
    <string name="reply_post_button">發佈</string>
    <string name="reply_post_hint">留言...</string>
    <string name="reply_post_error">留言失敗</string>
    <string name="app_update">有更新程式</string>
    <string name="app_update_negative">稍後</string>
    <string name="event_list_empty">沒有資料，請下拉更新</string>
    <string name="donation_tip">此專區服務是走台灣大哥大既有手機捐款系統流程，金流部分由台灣大哥大從隔月電信帳單扣款。如果選擇100,500,1000等的捐款，都是預設要領取收據，若您不希望領取，請點選「手動選其他金額」。
微樂志工是用撥電話自動送出代碼，減少民眾操作按鈕，微樂志工並不會拿到使用者的個人隱私資料，請放心。</string>
    <string name="donation_tip_dialog_title">小提醒</string>
    <string name="donation_tip_dialog_message_default">按下繼續後，將啟動撥號捐款流程，請自行依照指示，依序輸入代碼。成功捐款後您將收到電信商的捐款作業完成確認簡訊。</string>
    <string name="donation_tip_dialog_message">按下繼續後，將啟動自動撥號捐款流程，不需再自行輸入代碼，請等到最後感謝語音，再掛斷電話。成功捐款後您將收到電信商的捐款作業完成確認簡訊。\n(此功能預設同意電信商將您的聯絡資訊提供給受贈之公益團體寄送收據使用)</string>
    <string name="twmf_partner_site">https://www.isharing.tw/join</string>
    <string name="twmf_faq_site">http://www.isharing.tw/faq/plain/</string>
    <string name="twmf_rate_site">https://play.google.com/store/apps/details?id=com.taiwanmobile.volunteers</string>
    <string name="twmf_add_npo_site">http://www.isharing.tw/join/</string>
    <string name="twmf_facebook">https://www.facebook.com/isharing.tw</string>
    <string name="twmf_about">
<Data><![CDATA[
<h2>關於我們</h2>
台灣大哥大基金會2014年推出全國首創跨網站與APP的微樂志工公益媒合平台，提供公益團體尋找志工人力的管道，也鼓勵全民利用零散時間輕鬆報名做志工。此後陸續新增捐物資、找企業志工、信用卡捐款等功能，使得找志工、募物資、捐善款得以一站完成。
<br>
<br>誠摯歡迎全民一起集合「微」小志工力量，替社會創造巨大快「樂」能量，也歡迎公益團體上架微樂志工平台，以科技化方式更快速找到所需的資源！
<br>
<br>※公益團體成為微樂志工夥伴：https://www.isharing.tw/join

<h2>關於台灣大哥大基金會</h2>
台灣大哥大基金會成立於1999年，以發展電信學術、提升電信科技、促進國際交流、舉辦公益活動為宗旨，結合企業核心資源，投入各項社會、文化、教育、環保活動，持續服務社會、回饋大眾。
<br>
<br>※Email : TWMSBD@taiwanmobile.com
<br>※網址 ： www.twmf.org.tw
<br>※FB : https://zh-tw.facebook.com/twmf.org

<h2>隱私權政策</h2>
https://www.isharing.tw/privacy

<h2>服務條款</h2>
https://www.isharing.tw/tos
]]> </Data>
    </string>
    <string name="twmf_policy">
<Data><![CDATA[
台灣大哥大基金會(以下稱本基金會)係依照以下條款之約定(以下稱本條款)，提供微樂志工網站（http://www.isharing.tw）服務 (以下簡稱「本網站服務」)，請詳細閱讀相關內容以保障您的權益；當您開始使用本網站之各項資訊服務時，視為您已確實了解並同意遵守本條款或變更。
<br>
<br>一、服務內容及費用負擔
<br>本基金會係透過網際網路提供各項網路資訊服務，會員得於本基金會網站上進行瀏覽、查詢、申請或使用本基金會各項服務或取得資訊。 會員如要使用網站服務必須自行配備上網所需之各項電腦設備，以及負擔接上網際網路之費用及電話費用。
<br>
<br>二、 會員資料及隱私權保護
<br>會員須於首次使用網站服務時提供完整詳實且符合真實之個人資料，如登錄之資料嗣後有變更時，應隨時於線上更新。會員所提供之個人資料如有填寫不實、原所登錄之資料已不符合真實而未更新、所提供之個人資料違反或破壞本基金會服務宗旨或有任何誤導之嫌者，本基金會有權拒絕或隨時終止其使用網站服務之一部或全部。
<br>對於會員所登錄或留存之個人資料，包括會員之姓名、門號、地址、電子郵件地址及其他依法受保護之個人資料，除非經過會員之同意或是因其他法律之規定，本基金會絕對不會對外揭露。
<br>會員同意授權台灣大哥大基金會，得為提供服務及贈獎之目的，提供必需之會員資料給合作夥伴(第三者)做約定範圍內之妥善使用，倘若會員不同意將其資料列於合作夥伴(第三者)產品或服務名單內，可以通知台灣大哥大基金會，於名單中刪除其資料，同時放棄其使用網站報名活動權利。
<br>對於會員所登錄或留存之個人資料，會員同意本基金會、關係企業或合作對象，得於合理之範圍內蒐集、處理、保存、傳遞及使用該等資訊，以提供會員資料統計、關於網路行為之調查研究、提供優惠訊息、或為任何之合法使用等。
<br>基於網際網路之特性，有關會員資料使用與保護之細部約定，會員同意依照隱私權保護政策之規範。隱私權保護政策之內容請參閱台灣大哥大基金會「隱私權政策」。
<br>
<br>三、會員責任與義務
<br>會員使用網站服務應遵守中華民國相關法令及一切國際網際網路規定與慣例，且不得有下列行為：
<br>‧妨害他人名譽或隱私權。
<br>‧侵害他人營業秘密、商標權、著作權、專利權或其他權利。
<br>‧違反其依法律或契約所應負之保密義務。
<br>‧冒用他人名義或散播不實消息。
<br>‧傳輸色情、猥褻或其他違反善良風俗之言論或資訊。
<br>‧傳輸或散佈電腦病毒。
<br>‧利用本網站從事不法交易行為。
<br>‧擅自複製他人資訊轉售、轉載。
<br>‧擷取非經所有人正式開放或授權之資訊。
<br>其他利用本網站為任何違反消費者保護法、公平交易法或其他法令規定之行為。會員行為如涉及不法，除應由其自負法律責任外，本基金會將主動配合相關主管機關調查處理。
<br>如因會員違背本條款或相關法令，或有侵害他人權利之不法或不當行為，致本基金會或關係企業、受僱人、受託人、代理人及其他相關履行輔助人受有損害或支出費用（包括但不限於因進行民事、刑事及行政程序所支出之訴訟費用及律師費）時，會員應負擔損害賠償責任。
<br>會員同意授權本基金會對會員所公佈、張貼、傳送之任何資料訊息享有公開散佈、發行、重製、修改，編輯、轉載、轉授權、轉售或刪除之權利。
<br>會員同意使用網站服務時，應遵守各該項服務或活動之使用條款或說明，且如該項服務或活動須另行收費或係由本基金會代收資訊服務費者，會員亦應遵守本基金會相關之費率及收費辦法。
<br>
<br>四、保管及通知義務
<br>完成本服務的登記程序之後，您將收到一個密碼及帳號。會員有義務妥善保管使用網站服務時所填寫的本基金會門號與密碼，並為此組門號與密碼登入系統後所進行之一切活動負責。為維護會員自身權益，請勿將門號與密碼洩露或提供予第三人知悉、或出借或轉讓他人使用。若會員發現門號或密碼遭人非法使用或有任何異常破壞使用安全之情形時，應立即通知本基金會，如因此而造成會員權益受損，本基金會不負擔任何法律或賠償責任。
<br>
<br>五、服務之刪除或變更
<br>本基金會保留隨時新增、修改或刪除網站服務之全部或一部份之權利，且不另行個別通知，會員不得因此而要求任何補償或賠償。
<br>
<br>六、服務之停止或終止
<br>於發生下列情形之一時，台灣大哥大基金會網站有權可以停止、中斷提供服務：
<br>本網站如發生下列情形之一時，本基金會有權不經通知逕行停止或中斷提供服務，如因此致會員或第三人產生困擾、不便或損害，均不負任何法律責任：
<br>‧對電子通信設備進行必要之保養及施工時。
<br>‧發生突發性之電子通信設備故障時。
<br>‧由於所申請之電子通信服務因任何原因被停止，無法提供服務時。
<br>‧由於天災等不可抗力之因素致使無法提供服務時。
<br>基於網際網路之特性，會員瞭解並同意於使用本基金會網站服務時，應自行採取防護措施，如因本基金會、協力廠商或相關電信業者網路系統軟硬體設備之故障或失靈、人為操作上之疏失而致網站服務全部或一部中斷、暫時無法使用、遲延、或造成資料傳輸或儲存上之漏誤、或遭第三人侵入系統篡改偽造資料時，本基金會不負任何賠償責任。
<br>如會員有違反本條款或相關法令或有其他不當使用之情形發生時，本基金會得不經催告逕行加以限制或終止其使用本基金會網站之權利，會員不得因此要求補償或賠償。
<br>
<br>七、台灣大哥大基金會得依實際執行情形，增加、修改或終止相關活動，並選擇最適方式告知會員。
<br>
<br>八、線上報名參加志工活動行為
<br>會員同意其報名行為，以網站所示之電子報名資料為準，如有糾紛，並以該電子資料為認定標準。
<br>
<br>九、風險承擔
<br>會員保證使用各項網站服務係基於會員的個人意願，並同意自負任何風險，包括因為自本網站下載圖片、資料或自網站服務中獲得之資料，導致其電腦系統損壞或資料流失等情形。
<br>
<br>十、擔保責任免除
<br>本基金會就各項網站服務，不負擔任何明示或默示之擔保責任，亦不保證各項服務之穩定、安全、無誤、及不中斷。本基金會不保證使用網站服務之結果或經由本基金會網站獲得之資訊符合會員之期望，亦無法保證會員不會因此接觸到不適當之內容。
<br>
<br>十一、賠償責任限制
<br>會員如無法使用本網站服務時，其所致生之任何直接、間接、衍生、或特別損害等，本會均不負任何賠償責任。若會員使用之服務係有價者，本基金會僅於會員所付之有價範圍內負責賠償。但前述賠償責任限制，若依法為不得限制者，則限制規定將不予適用。
<br>
<br>十二、特別同意事項
<br>會員同意絕不使用本基金會網站服務傷害、侵犯、誹謗或攻擊本基金會、本基金會之負責人、員工、顧問、關係企業、廣告主以及相關合作廠商。
<br>
<br>十三、權利歸屬
<br>本基金會網站上之所有著作及資料，其著作權、專利權、商標、營業秘密、其他智慧財產權、所有權及其他權利，均為本基金會或其合法權利人所有，除事先經本基金會或合法權利人之合法授權外，會員不得擅自重製、傳輸、改作、編輯或以其他任何形式、基於任何目的加以使用，否則應負擔所有法律責任。
<br>
<br>十四、連結
<br>本基金會在所有服務相關網頁上提供之連結方式，可能連結到其他個人、公司或組織之網站。提供該等連結之目的，僅係為便利會員自行蒐集或取得資訊，本基金會對於被連結之該等個人、公司或組織之網站上所提供之產品、服務及資訊，不擔保其真實性、完整性、即時性或可信度，該等個人、公司或組織亦不因此而當然與本基金會有任何僱佣、委任、代理、合夥或其他類似之關係。
<br>
<br>十五、條款之修正及個別條款之效力
<br>本基金會得隨時修正本條款，並隨時透過網站公佈之，修正條款自公佈時起生效。
<br>本條款所定之任何條款，其全部或一部無效時，不影響其他條款之效力。
<br>
<br>十六、準據法及管轄法院
<br>會員同意本條款之解釋及效力適用中華民國法律，且如因此涉訟，以台灣台北地方法院為第一審管轄法院。
]]> </Data>
    </string>
    <string name="twmf_privacy">
<Data><![CDATA[
為保障您的權益， 請您詳閱下列隱私權保護政策內容：
<br>
<br>一、	資料之蒐集
<br>在您使用本APP時，將會請您提供您的個人相關資料，包括但不限於行動電話門號、身分證字號、姓名、電子郵件地址…等。 台灣大哥大基金會保留您所提供的上述資料，也會保留您上網瀏覽或查詢時，在系統上產生的相關記錄，包括IP位址、使用時間、瀏覽及點選紀錄等。
<br>二、	資料之保護
<br>您的個人資料完整儲存於台灣大哥大基金會雲端資料儲存系統中，並以嚴密的保護措施防止未經授權人員之接觸。台灣大哥大基金會的人員均接受過完整之資訊保密教育，充分瞭解用戶資料之保密是我們的基本責任，如有違反保密義務者，將受相關法律及公司內部規定之處分。為了保護您個人資料之完整及安全，保存您個人資料之資料處理系統均已接受妥善的維護，並符合相關主管機關嚴格之要求，以保障您的個人資料不會被不當取得或破壞。 如因業務需要有必要委託第三者提供服務時，台灣大哥大基金會亦會嚴格要求其遵守保密義務，並且採取必要檢查程序以確定其將確實遵守。
<br>三、	資料之使用
<br>本APP對於您個人資料之使用，僅提供予以公益團隊舉辦志工活動時使用，在蒐集之特定目的及相關法令規定之範圍內為之。 除非經由您的同意或其他法令之特別規定本APP絕不會將您的個人資料揭露於第三人或使用於蒐集目的以外之其他用途。
<br>四、	連結網頁之使用
<br>本APP可能提供其他網站的網路連結，您也可經由本APP所提供的連結，點選進入其他網站。但APP並不保護您於該連結網站中的隱私權。
<br>五、	個人資料之授權及修正
<br>當您同意加入本APP，並同意成為會員，即代表:
<br>您授權將個人資料提供給第三方作為特定目的使用。當您發現個人資料須修改時，經過身分確認無誤後，您可透過本APP提供之服務管道進行修改、更正以確保自身權益。您有權利隨時透過登入本APP之方式，新增、修改或更正您於本APP中所存放之個人資料。若您需要刪除本APP所留存您的個人資料時，您必須通知本公司且終止使用本服務，但若本公司依法有保留個人資料之正當理由時，則仍將繼續留存資料。
<br>六、	隱私權保護政策之修正
<br>隱私權保護政策將因應需求隨時進行修正，以落實保障使用者隱私權之立意。修正後的條款將刊登於微樂志工網站及APP上。
]]> </Data>
    </string>
    <string name="advance_search_volunteer_hours">進階搜尋志工時數</string>
    <string name="user_data_service_title">可服務項目與可服務區域</string>
    <string name="service_item_title">可服務項目</string>
    <string name="service_area_title">可服務區域</string>
    <string name="content_desc_right_arrow">right arrow</string>
    <string name="licenses_title">專業證照</string>
    <string name="x">X</string>
    <string-array name="tip_choice">
        <item>1小時</item>
        <item>24小時</item>
        <item>48小時</item>
    </string-array>
    <string-array name="location_choice">
        <item>不限</item>
        <item>台北市</item>
        <item>新北市</item>
        <item>基隆市</item>
        <item>桃園縣</item>
        <item>新竹市</item>
        <item>新竹縣</item>
        <item>苗栗縣</item>
        <item>台中市</item>
        <item>彰化縣</item>
        <item>南投縣</item>
        <item>雲林縣</item>
        <item>嘉義市</item>
        <item>嘉義縣</item>
        <item>台南市</item>
        <item>高雄市</item>
        <item>屏東縣</item>
        <item>宜蘭縣</item>
        <item>花蓮縣</item>
        <item>台東縣</item>
        <item>澎湖縣</item>
        <item>金門縣</item>
        <item>連江縣</item>
    </string-array>
    <string-array name="county_mapping">
        <item>台北市</item>
        <item>新北市</item>
        <item>基隆市</item>
        <item>桃園市</item>
        <item>新竹市</item>
        <item>新竹縣</item>
        <item>苗栗縣</item>
        <item>台中市</item>
        <item>彰化縣</item>
        <item>南投縣</item>
        <item>雲林縣</item>
        <item>嘉義市</item>
        <item>嘉義縣</item>
        <item>台南市</item>
        <item>高雄市</item>
        <item>屏東縣</item>
        <item>宜蘭縣</item>
        <item>花蓮縣</item>
        <item>台東縣</item>
        <item>澎湖縣</item>
        <item>金門縣</item>
        <item>連江縣</item>
    </string-array>
    <string-array name="service_item_type">
        <item>圖文處理</item>
        <item>行政庶務</item>
        <item>兒童伴讀</item>
        <item>英語教學</item>
        <item>硬體維修</item>
        <item>資訊教學</item>
        <item>緊急救援</item>
        <item>翻譯</item>
        <item>醫療服務</item>
        <item>攝影/錄影</item>
        <item>訪視陪伴</item>
        <item>接送</item>
        <item>網路行銷</item>
        <item>法律諮詢</item>
    </string-array>
    <string-array name="volunteer_category_choice">
        <item>環保生態</item>
        <item>動物保護</item>
        <item>文化藝術</item>
        <item>教育輔導諮詢</item>
        <item>行政文書</item>
        <item>應用外語</item>
        <item>陪伴關懷</item>
        <item>人身安全</item>
        <item>電機營造</item>
        <item>醫護健康</item>
        <item>國際交流</item>
        <item>其他</item>
    </string-array>
    <string-array name="item_category_choice">
        <item>不限</item>
        <item>食物、保健</item>
        <item>教材、文具</item>
        <item>日用、餐廚、傢俱、寢飾</item>
        <item>家電、電子產品</item>
        <item>休閒、運動、服飾</item>
        <item>其他</item>
    </string-array>
    <string-array name="donation_choice">
        <item>手動選其他金額</item>
        <item>捐款100</item>
        <item>捐款200</item>
        <item>捐款300</item>
        <item>捐款500</item>
        <item>捐款1,000</item>
        <item>捐款1,500</item>
        <item>捐款2,000</item>
        <item>捐款3,000</item>
        <item>捐款6,000</item>
    </string-array>
    <string-array name="full_status_choice">
        <item>不限</item>
        <item>已額滿</item>
        <item>未額滿</item>
    </string-array>
    <string name="webServiceAccessKeySecret" translatable="false">7b710ff6d11fda1c386111a60e5e0702</string>
    <string name="other_accounts_label">以其他賬號登入</string>
    <string name="btn_login_fubon">我是富邦愛心志工社會員</string>
    <string name="btn_login_twm">我是台灣大哥大會員</string>
    <string name="btn_back">返回</string>
    <string name="btn_confirm">確定</string>
    <string name="state_bind">已綁定</string>
    <string name="state_unbind">未綁定</string>
    <string name="link_bind">前往綁定</string>
    <string name="link_unbind">解除綁定</string>
</resources>